modificacion de aventura en css con grids

--- a/pages/aventura.html
+++ b/pages/aventura.html
@@ -7,27 +7,17 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="seccionheader">
+    <header>
         <div>
             <img src="../assets/img/logo.png">
         </div>
-        <nav>
+        <nav class="navBar">
             <ul>
-                <li>
-                    <a href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="./tu-proximo-destino.html">Tu próximo destino</a>
-                </li>
-                <li>
-                    <a href="./que-son-los-pueblos-magicos.html">¿Qué son los pueblos magicos?</a>
-                </li>
-                <li>
-                    <a href="#">Aventura</a>
-                </li>
-                <li>
-                    <a href="./registrate.html">Registrate</a>
-                </li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./tu-proximo-destino.html">Tu próximo destino</a></li>
+                <li><a href="./que-son-los-pueblos-magicos.html">¿Qué son los pueblos magicos?</a></li>
+                <li><a href="#">Aventura</a></li>
+                <li><a href="./registrate.html">Registrate</a></li>
             </ul>
         </nav>
     </header>
@@ -35,43 +25,49 @@
         <section class="seccionTituloPrincipal">
             <h1>Aventura</h1>
         </section>
-        <section class="seccionAventura">
-            <article class="tarjetas2">
-                <h2>Isla De Janitzio</h2>
-                <h3>Pátzcuaro-Michoacán</h3>
-                <p>Toma una lancha desde el muelle de Pátzcuaro hasta la Isla de Janitzio, famosa por su monumento a José María Morelos y su vibrante vida comunitaria. La isla ofrece vistas panorámicas del lago y la oportunidad de ver a los pescadores locales en acción.
+        <section class="gridContainer">
+            <article class="item1">
+                <div>
+                    <h2>Isla De Janitzio</h2>
+                    <h3>Pátzcuaro-Michoacán</h3>
+                    <p>Toma una lancha desde el muelle de Pátzcuaro hasta la Isla de Janitzio, famosa por su monumento a José María Morelos y su vibrante vida comunitaria. La isla ofrece vistas panorámicas del lago y la oportunidad de ver a los pescadores locales en acción.
                     La isla es un lugar lleno de tradiciones, con una rica historia y una cultura viva. Además, la vista desde la cima del monumento es impresionante.</p>
+                </div>
                 <div><img src ="../assets/img/isla-janitzio.png"></div>
             </article>
-            <article class="tarjetas4">
-                <h2>Kayak y paddleboard en la Laguna de los Siete Colores</h2>
-                <h3>Bacalar-Quintana Roo</h3>
-                <p>El kayak y el paddleboard en la Laguna de Bacalar pueden ser bastante desafiantes debido a las corrientes y la extensión de la laguna. Es una excelente manera de explorar las aguas cristalinas y los cenotes subacuáticos.
+            <article class="item2">
+                <div>
+                    <h2>Kayak y paddleboard en la Laguna de los Siete Colores</h2>
+                    <h3>Bacalar-Quintana Roo</h3>
+                    <p>El kayak y el paddleboard en la Laguna de Bacalar pueden ser bastante desafiantes debido a las corrientes y la extensión de la laguna. Es una excelente manera de explorar las aguas cristalinas y los cenotes subacuáticos.
                     La belleza natural de la laguna, combinada con la emoción de remar en sus aguas claras y descubrir sus secretos, ofrece una experiencia única y emocionante.</p>
+                </div>
                 <div><img src ="../assets/img/tulum-laguna.png"></div>
             </article>
-            <article class="tarjetas1">
-                <h2>Senderismo en el Bosque de la Sierra del Tigre</h2>
-                <h3>Mazamitla-Jalisco</h3>
-                <p>Explora los senderos del bosque en la Sierra del Tigre, donde puedes disfrutar de caminatas entre pinos y encinos, y descubrir cascadas y miradores naturales.
+            <article class="item3">
+                <div>
+                    <h2>Senderismo en el Bosque de la Sierra del Tigre</h2>
+                    <h3>Mazamitla-Jalisco</h3>
+                    <p>Explora los senderos del bosque en la Sierra del Tigre, donde puedes disfrutar de caminatas entre pinos y encinos, y descubrir cascadas y miradores naturales.
                     La abundante vegetación y las impresionantes vistas hacen de este lugar un paraíso para los amantes del senderismo y la naturaleza.</p>
+                </div>
                 <div><img src ="../assets/img/sierra-del-tigre.png"></div>
             </article>
-            <div>
+            <div class="item4">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/2fVS01ueHm4?si=EtCQWfU6fZoWmKwA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
     <footer class="seccionPieDePagina">
-        <div>
-            <img src="../assets/img/logofooter.png">
-        </div>
-        <div>
-            <ul>
-                <li><a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram.png" alt=""></a></li>
-                <li><a href="https://www.tiktok.com/es/" target="_blank"><img src="../assets/img/tiktok.png" alt=""></a></li>
-            </ul>
-        </div>
-    </footer>
+            <div>
+                <img src="../assets/img/logofooter.png">
+            </div>
+            <div>
+                <ul class="iconosRedesSociales">
+                    <li><a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/logoInstagram.png" alt=""></a></li>
+                    <li><a href="https://www.tiktok.com/es/" target="_blank"><img src="../assets/img/tiktok.png" alt=""></a></li>
+                </ul>
+            </div>
+        </footer>
 </body>
 </html>
