--- a/pages/tu-proximo-destino.html
+++ b/pages/tu-proximo-destino.html
@@ -93,7 +93,7 @@
                             Las playas de arena blanca y las aguas turquesas son perfectas para relajarse y practicar snorkel o buceo en los cenotes cercanos.</p>
                     </div>
                 </article>
-                <div>
+                <div class="video2">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Ls27SUorlM0?si=aDN0myb0WyvYVr6i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                     </iframe>
                 </div>
