segunda entrega flex grids responsive 2 paginas bootstrap

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/HYpITZWzDUU?si=DB7FCzJtBt-5hYhd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
+            <section class="gridContainer">
+                <h2>Anda por méxico y dejate envolver por sus colores</h2>
+                <img src="./assets/img/img1grid.png" class="img1grid">
+                <h3 class="p1">De ninguna manera volveré a México. No soporto estar en un país más surrealista que mis pinturas. – Salvador Dalí</h3>
+                <img src="./assets/img/img2grid.png" class="img2grid">
+                <h3 class="p2">Yo aquí en Gringolandia me paso la vida soñando con volver a México. – Frida Kahlo</h3>    
+                <img src="./assets/img/img3grid.png" class="img3grid">
+                <img src="./assets/img/img4grid.png" class="img4grid">
+            </section>
         </main>
         <footer class="seccionPieDePagina">
             <div>
