--- a/pages/aventura.html
+++ b/pages/aventura.html
@@ -25,8 +25,8 @@
         <section class="seccionTituloPrincipal">
             <h1>Aventura</h1>
         </section>
-        <section class="gridContainer">
-            <article class="item1">
+        <section class="contedorAventura">
+            <div class="cardAventura">
                 <div>
                     <h2>Isla De Janitzio</h2>
                     <h3>Pátzcuaro-Michoacán</h3>
@@ -34,17 +34,17 @@
                     La isla es un lugar lleno de tradiciones, con una rica historia y una cultura viva. Además, la vista desde la cima del monumento es impresionante.</p>
                 </div>
                 <div><img src ="../assets/img/isla-janitzio.png"></div>
-            </article>
-            <article class="item2">
+            </div>
+            <div class="cardAventura">
+                <div><img src ="../assets/img/tulum-laguna.png"></div>
                 <div>
                     <h2>Kayak y paddleboard en la Laguna de los Siete Colores</h2>
                     <h3>Bacalar-Quintana Roo</h3>
                     <p>El kayak y el paddleboard en la Laguna de Bacalar pueden ser bastante desafiantes debido a las corrientes y la extensión de la laguna. Es una excelente manera de explorar las aguas cristalinas y los cenotes subacuáticos.
                     La belleza natural de la laguna, combinada con la emoción de remar en sus aguas claras y descubrir sus secretos, ofrece una experiencia única y emocionante.</p>
                 </div>
-                <div><img src ="../assets/img/tulum-laguna.png"></div>
-            </article>
-            <article class="item3">
+            </div>
+            <div  class="cardAventura">
                 <div>
                     <h2>Senderismo en el Bosque de la Sierra del Tigre</h2>
                     <h3>Mazamitla-Jalisco</h3>
@@ -52,8 +52,8 @@
                     La abundante vegetación y las impresionantes vistas hacen de este lugar un paraíso para los amantes del senderismo y la naturaleza.</p>
                 </div>
                 <div><img src ="../assets/img/sierra-del-tigre.png"></div>
-            </article>
-            <div class="item4">
+            </div>
+            <div class="video3">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/2fVS01ueHm4?si=EtCQWfU6fZoWmKwA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
