--- a/pages/registrate.html
+++ b/pages/registrate.html
@@ -4,30 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
     <body>
-        <header class="seccionheader">
+        <header class="seccionheaderRegistrate">
             <div>
                 <img src="../assets/img/logo.png">
             </div>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="../index.html">Inicio</a>
-                    </li>
-                    <li>
-                        <a href="./tu-proximo-destino.html ">Tu próximo destino</a>
-                    </li>
-                    <li>
-                        <a href="./que-son-los-pueblos-magicos.html">¿Qué son los pueblos magicos?</a>
-                    </li>
-                    <li>
-                        <a href="./aventura.html">Aventura</a>
-                    </li>
-                    <li>
-                        <a href="#">Registrate</a>
-                    </li>
+            <nav class="navBarRegistrate">
+                <ul class="d-flex justify-content-center gap-3">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./tu-proximo-destino.html ">Tu próximo destino</a></li>
+                    <li><a href="./que-son-los-pueblos-magicos.html">¿Qué son los pueblos magicos?</a></li>
+                    <li><a href="./aventura.html">Aventura</a></li>
+                    <li><a href="#">Registrate</a></li>
                 </ul>
             </nav>
         </header>
@@ -40,7 +31,7 @@
                     <h2>Uneta a nuestra página para recibir las notificaciones de nuevas actualizaciones de destinos, noticias y nuevas aventuras a tu correo</h2>
                 </div>
                 <div>
-                    <form action="">
+                    <form action="" class="registrateForm">
                         <label for="nombre">Nombre:</label>
                         <input type="text" id="nombre" name="nombre" required placeholder="Ingresa tu nombre">
                         <label for="correo">Correo electónico:</label>
@@ -61,11 +52,13 @@
                 <img src="../assets/img/logofooter.png">
             </div>
             <div>
-                <ul>
-                    <li><a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram.png" alt=""></a></li>
+                <ul class="iconosRedesSociales">
+                    <li><a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/logoInstagram.png" alt=""></a></li>
                     <li><a href="https://www.tiktok.com/es/" target="_blank"><img src="../assets/img/tiktok.png" alt=""></a></li>
                 </ul>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     </body>
 </html>
